# PyGPUkit

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  ISSUE_TF32_OPTIMIZATION.md  README.md  bench_all_strategies.py  bench_tf32_v2.py  benchmark.py  benchmark_all.py  benchmark_ampere.py  benchmark_cuda_graph.py  benchmark_fa3_sm120.py  benchmark_fa3_tma.py  benchmark_fa4_sm120.py  benchmark_fused_kernels.py  benchmark_rust.py  build.sh  debug_fa3_determinism.py  demo_cuda_graph_comparison.py  demo_qwen3.py  demo_scheduler_log.py  pyproject.toml  test_flash_attention.py  test_fused_kernels.py
.claude/agents/: commit-helper.md  doc-generator.md  perf-analyzer.md
.github/workflows/: ci.yml  publish-testpypi.yml  release.yml
.serena/: project.yml
.serena/memories/: fa4_sm120_research.md  tma_descriptor_reference.md  tma_fa3_optimization_status.md
benchmarks/: benchmark_nvf4_bf16.py  benchmark_nvf4_nvf4.py  benchmark_w8a16_gemm.py
docs/: fa4_sm120_implementation_report.md
examples/: bench_cuda_graph_llm.py  benchmark_compare.py  benchmark_fa3.py  benchmark_fa3_tma.py  benchmark_flux_vs_diffusers.py  benchmark_large.py  benchmark_matmul.py  chat_cli.py  chat_cli_moe.py  chat_cli_thinking.py  chat_cli_triton.py  debug_fa3_tma.py  demo_cuda_graph.py  demo_full_voice_pipeline.py  demo_llm_e2e.py  demo_llm_tts_pipeline.py  demo_runtime_modes.py  demo_v02.py  demo_v0210.py  demo_v023.py  demo_v025.py  demo_v026_multi_llm.py  demo_v026_real_models.py  demo_v02_full.py  demo_voice_pipeline.py  ncu_fa3_profile.py  scheduler_simulation.py  tts.py  whisper_realtime_stt.py
native/: CMakeLists.txt
native/bindings/: bindings_common.hpp  core_bindings.cpp  jit_bindings.cpp  ops_bindings.cpp
native/bindings/gemm/: fp8xbf16_bf16.cpp  fp8xfp8_bf16.cpp  fp8xfp8_fp8.cpp  generic.cpp  grouped.cpp  int.cpp  nvf4xbf16_bf16.cpp
native/bindings/gemv/: fp8xfp8_bf16.cpp  generic.cpp  nvf4xbf16_bf16.cpp
native/bindings/nn/: activation.cpp  attention.cpp  conv.cpp  diffusion.cpp  fused.cpp  llama4.cpp  rope.cpp
native/core/: cuda_graph.cu  cuda_graph.hpp  device.cpp  driver_api.hpp  driver_context.hpp  types.hpp
native/jit/: compiler.cpp  compiler.hpp  cublaslt_loader.cpp  cublaslt_loader.hpp
native/ops/: basic.cu  basic.cuh  matmul_cublas.cuh  matmul_cublaslt.cuh  matmul_cutlass.cuh  matmul_f32_tf32.cuh  matmul_f32_tf32_v2.cuh  ops.cuh
native/ops/audio/: audio.cu  audio.hpp  audio_kernels.cuh
native/ops/common/: pipeline.cuh  tma_descriptor_cache.cuh  tma_utils.cuh  warp_scheduler.cuh
native/ops/conv/: conv1d.cu  conv1d_kernels.cuh
native/ops/elementwise/: elementwise_kernels.cuh
native/ops/gemv/: gemv_cutlass.cuh  gemv_fp8.cuh  gemv_nvf4.cu  gemv_nvf4_sm120.cuh
native/ops/matmul/: batched.cu  build_fp8_bf16_test.bat  matmul.cu  matmul_cutlass.cu  matmul_fp8_bf16_sm120.cu  matmul_fp8_fp32_sm120.cu  matmul_fp8_fp8_sm120.cu  matmul_fp8_sm120.cu  matmul_nvf4_bf16_sm120.cu  matmul_nvf4_nvf4_sm120.cu  test_fp8_bf16_sm120.cu  test_fp8_patched.cu
native/ops/matmul/gemm/bf16_bf16/sm80/: bf16_cutlass.cuh
native/ops/matmul/gemm/bf16_bf16/sm90/: bf16_cutlass.cuh
native/ops/matmul/gemm/fp8/bf16/sm120/: fp8_blockwise.cu  grouped_gemm.cu  w8a16_gemm.cu
native/ops/matmul/gemm/fp8/fp8/sm120/: fp8_cutlass.cu  fp8_cutlass_v3.cu
native/ops/matmul/gemm/fp8_block_scale/: fp8_block_scale_mma.cu  fp8_block_scale_mma_sm120.cuh  test_mma_direct.cuh
native/ops/matmul/gemm/int8/int8/sm120/: int8_via_fp8.cu
native/ops/matmul/gemv/bf16/bf16/sm120/: fp8.cuh  fp8_kernels.cu  nvf4.cu  nvf4.cuh  nvf4_kernels.cu
native/ops/matmul/gemv/fp8/fp8/sm120/: fp8_accurate.cu  fp8_accurate.cuh  fp8_gemv.cu  fp8_gemv.cuh
native/ops/matmul/gemv/nvf4/nvf4/sm120/: nvf4_gemv.cu  nvf4_gemv.cuh
native/ops/moe/: moe.cu  moe_kernels.cuh
native/ops/nn/: activation_kernels.cuh  attention_kernels.cuh  elementwise_kernels.cuh  embedding_kernels.cuh  flash_attention.cuh  fused_kernels.cuh  kv_cache_kernels.cuh  llama4_kernels.cuh  memory_kernels.cuh  nn.cu  nn_kernels.cuh
native/ops/nn/attention/: fa3_online_softmax.cuh  fa3_traits.cuh  flash_attention_3.cuh  flash_attention_3_fp8_sm120.cuh  flash_attention_3_sm120.cuh  flash_attention_3_tma.cuh  flash_attention_4_sm120.cuh  sdpa_causal.inl
native/ops/nn/attention/arch/: fa3_mma_sm100.cuh  fa3_mma_sm120.cuh
native/ops/nn/diffusion/: conv2d_kernels.cuh  cross_attention_kernels.cuh  diffusion.inl  flux_kernels.cuh
native/ops/nn/fused/: fused.inl
native/ops/nn/llama4/: llama4.inl
native/ops/reduction/: reduction_kernels.cuh
native/ops/sampling/: sampling.cu  sampling_kernels.cuh
native/ops/unary/: unary_kernels.cuh
tests/: bench_all_gemv.py  bench_fp8_fp8_gemm.py  bench_int4_gemm.py  bench_int8_gemm.py  check_rel_error.py  stress_test.py  test_3090ti_performance.py  test_audio.py  test_flux_kernels.py  test_fp8_accurate_gemv.py  test_fp8_sm120.py  test_gemv_correctness.py  test_jit.py  test_llm_unified.py  test_memory_pool.py  test_moe_inference.py  test_nvf4_bf16_sm120.py  test_ops.py  test_profiling.py  test_rust_admission_qos.py  test_scheduler.py  test_stream.py  test_tf32_tensorcore.py  test_triton_all.py  test_triton_raw_ptr.py  test_triton_rmsnorm.py  test_tts_layers.py  test_w8a16_gemm_correctness.py  test_w8a16_gemm_simple.py
(+98 files in other folders)
